--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/ShlomoGalle/NodeJS_WebAnalytic#readme",
   "dependencies": {
+    "axios": "^0.25.0",
+    "cheerio": "^1.0.0-rc.10",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "nodemon": "^2.0.15"
